--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -4,8 +4,7 @@
   width: inherit;
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: calc(100vh - 40px);
   position: relative;
   flex: 1;
-  margin-bottom: -$header-height;
 }
